--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 .top-container {
     height: 100vh;
     background-color: #FFF8F3;
-    
+
 }
 
 .flex-container {
@@ -85,7 +85,7 @@ body {
 }
 
 .left-info-width p {
-    font-size: 18px;
+    font-size: 16px;
     line-height: 30px;
     color: #757575;
     padding-bottom: 30px;
@@ -114,5 +114,52 @@ body {
 
 .right-info-width img {
     width: 100%;
-    padding-top: 138px;
+    padding-top: 135px;
+}
+
+.main-section {
+    width: 80%;
+    margin: 0 auto;
+    padding: 30px 0px;
+}
+
+.about-container {
+    padding: 100px 130px;
+    background: #FFF8F3;
+    border-radius: 10px;
+}
+
+.align-center {
+    text-align: center;
+}
+
+.color-gray {
+    color: #757575;
+}
+
+.card-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.card-container h3 {
+    margin-top: 0;
+}
+
+.card-container p {
+    margin-bottom: 0;
+}
+
+.skill-heading {
+    text-align: center;
+    width: 80%;
+    margin: 0 auto;
+    padding-bottom: 70px;
+}
+
+.card {
+    padding: 30px 33px;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
 }
