--- a/style.css
+++ b/style.css
@@ -163,3 +163,45 @@ body {
     box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
     border-radius: 5px;
 }
+.resume-title{
+    text-align: center;
+    margin-bottom: 30px;
+}
+.eduex-conatiner{
+    display: flex;
+    justify-content: space-between;
+    gap: 90px;
+    margin-bottom: 50px;
+}
+.cv-btn{
+    display: flex;
+    justify-content: center;
+}
+.footer-section{
+    background-color: #FFF8F3;
+    padding: 50px 0px;
+    margin-top: 30px;
+}
+.half-width{
+    width: 50%;
+}
+.contact-msg{
+    padding-bottom: 15px;
+}
+.contact img{
+    margin-right: 20px;
+}
+.message input{
+    display: block;
+    margin-bottom: 20px;
+    padding: 18px 30px;
+    border-radius: 5px;
+    border: none;
+    width: 100%;
+}
+.message textarea{
+    width: 100%;
+    border: none;
+    padding: 18px 30px;
+    margin-bottom: 40px;
+}
